[package]
name = "bust"
authors = ["Vinícius Rodrigues Miguel <vrmiguel99@gmail.com>"]
version = "0.1.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/vrmiguel/bust"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc      = "0.2.97"
cfg-if    = "1.0.0"
daemonize = "0.4.1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
