[package]
name = "bustd"
authors = ["Vinícius Rodrigues Miguel <vrmiguel99@gmail.com>"]
version = "0.1.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/vrmiguel/bustd"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc      = "0.2.97"
cfg-if    = "1.0.0"
daemonize = "0.4.1"
no-panic  = "0.1.15"
argh      = "0.1.5"

[build-dependencies]
cc   = "1.0.68"
libc = "0.2.97"

# Optimize debug in order to 
# run [no_panic] 
[profile.dev]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
