[package]
name = "bustd"
authors = ["Vinícius Rodrigues Miguel <vrmiguel99@gmail.com>"]
version = "0.1.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/vrmiguel/bustd"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = { version = "0.3.0", optional = true }
libc      = "0.2.97"
cfg-if    = "1.0.0"
daemonize = "0.4.1"
argh      = "0.1.5"

[build-dependencies]
cc   = "1.0.68"
libc = "0.2.97"

[dev-dependencies]
# Using a somewhat popular crate, `procfs`, to test our own
# implementation of proc-fs reads.
# Probably not the best decision possible but OK for now
procfs = "0.9.1"

[features]
glob-ignore = ["glob"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
